--- a/tyyli.css
+++ b/tyyli.css
@@ -1,346 +1,2 @@
-html,
-body {
-    margin: 0px;
-    background-color: rgba(0, 0, 0, .3);
-    overflow-x: hidden;
-    font-family: 'Work Sans', sans-serif!important;
-    background: url(../javascript-peli/taustakuva2.jpg);
-    -webkit-background-position: center;
-    -moz-background-position: center;
-    -o-background-position: center;
-    background-position: center;
-    -webkit-background-repeat: no-repeat;
-    -moz-background-repeat: no-repeat;
-    -o-background-repeat: no-repeat;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    height: 100%;
-}
-
-h1 {
-    font-size: 20px;
-    font-family: monospace;
-    color: #fff!important;
-}
-
-.ohjenappula {
-    position: relative;
-    text-align: center;
-}
-
-.fa-info-circle {
-    font-size: 48px!important;
-    color: red;
-    position: absolute;
-    top: 8px;
-    right: 16px;
-    display: inline-block;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-
-}
-
-.popuptext {
-
-    visibility: hidden;
-    width: 250px;
-    height: 320px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 8px;
-    position: absolute;
-    z-index: 1;
-    top: 8px;
-    right: 70px;
-}
-
-.popuptext::after {
-    content: "";
-    position: absolute;
-    top: 10%;
-    left: 100%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
-
-}
-
-.show {
-    visibility: visible;
-    -webkit-animation: fadeIn 1.5s;
-    animation: fadeIn 1.5s;
-}
-
-@-webkit-keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-.etusivu {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100%;
-    padding-right: 5px!important;
-    padding-left: 5px!important;
-    margin-right: auto;
-    margin-left: auto;
-    min-width: 280px;
-}
-
-.otsikko {
-    text-align: center;
-    text-shadow: 0px 0px 20px #ff005b;
-}
-
-
-.oma {
-    display: block;
-    max-width: 100%;
-    height: auto;
-    margin-top: 1px;
-}
-
-.paina2 {
-    background-color: transparent;
-    border-radius: 10px;
-    margin-top: auto;
-    cursor: pointer;
-    color: #fff;
-    padding: 60px;
-    border: 2px solid;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    font-size: 30px;
-}
-
-.paina2:hover {
-    background-color: rgba(0, 0, 0, .5);
-}
-
-.paina2:active {
-    transform: translateY(6px);
-}
-
-.col-xs-6 {
-    padding-right: inherit!important;
-    padding-left: inherit!important;
-}
-
-/****************************************************/
-
-/********** Vaihto ja Rooli nappaimet **********/
-
-#vihrea {
-    display: none;
-    border-radius: 10px;
-}
-
-#punanen {
-    display: none;
-    border-radius: 10px;
-}
-
-.vaihto {
-    background-color: transparent;
-    margin-top: auto;
-    cursor: pointer;
-    color: #fff;
-    padding: 50px 65px 50px 65px;
-    border: 2px solid;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-    font-size: 30px;
-    text-align: center;
-    margin: 5px;
-}
-
-.vaihto:hover {
-    background-color: rgba(0, 0, 0, .5);
-}
-
-.vaihto:active {
-    transform: translateY(6px);
-}
-
-.rooli {
-    background-color: transparent;
-    margin-top: auto;
-    cursor: pointer;
-    color: #fff;
-    padding: 50px 65px 50px 65px;
-    border: 2px solid;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-    font-size: 30px;
-    text-align: center;
-    margin: 5px;
-}
-
-.rooli:hover {
-    background-color: rgba(0, 0, 0, .5);
-}
-
-.rooli:active {
-    transform: translateY(6px);
-}
-
-/****************************************************/
-
-/********** Valko ja Musta nappaimet **********/
-
-.valkovari2 {
-    background-color: transparent;
-    margin-top: auto;
-    cursor: pointer;
-    color: #fff;
-    border: 2px solid;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-    padding: 50px 65px 50px 65px;
-    font-size: 30px;
-    text-align: center;
-    margin: 5px;
-}
-
-.valkovari2:hover {
-    background-color: rgba(0, 0, 0, .5);
-}
-
-
-.valkovari2:active {
-    transform: translateY(6px);
-}
-
-.mustavari2 {
-    background-color: transparent;
-    margin-top: auto;
-    cursor: pointer;
-    color: #fff;
-    border: 2px solid;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-    padding: 50px 65px 50px 65px;
-    font-size: 30px;
-    text-align: center;
-    margin: 5px;
-}
-
-.mustavari2:hover {
-    background-color: rgba(0, 0, 0, .5);
-}
-
-.mustavari2:active {
-    transform: translateY(6px);
-}
-
-#mustavari {
-    display: none;
-    border-radius: 10px;
-    color: white;
-}
-
-#valkovari {
-    display: none;
-    border-radius: 10px;
-}
-
-/****************************************************/
-
-@media (max-width: 768px) {
-    h1 {
-        font-size: 18px!important;
-
-    }
-    .etusivu {
-        margin: 0px;
-        height: auto;
-    }
-    .paina2 {
-        padding: 45px;
-        font-size: 20px;
-    }
-
-    .oma {
-        display: block;
-        max-width: 100%;
-        height: auto;
-        padding: -100px;
-        margin-top: 1px;
-    }
-
-    /********** Valko ja Musta nappaimet **********/
-    .valkovari2 {
-        font-size: 20px;
-        padding: 30px;
-    }
-
-    .mustavari2 {
-        padding: 30px;
-        font-size: 20px;
-    }
-    /****************************************************/
-    /********** Vaihto ja Rooli nappaimet **********/
-    .vaihto {
-        padding: 30px;
-        font-size: 20px;
-    }
-
-    .rooli {
-        padding: 30px;
-        font-size: 20px;
-    }
-
-    /****************************************************/
-}
-
-@media (max-width: 450px) {
-    .etusivu {
-        height: 100%;
-    }
-
-    /********** Valko ja Musta nappaimet **********/
-    .valkovari2 {
-        font-size: 20px;
-        padding: 30px;
-    }
-
-    .mustavari2 {
-        padding: 30px;
-        font-size: 20px;
-    }
-    /****************************************************/
-}
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2018/04/13 23:23:37 */
+html,body{margin-left:0in;}html,body{margin-bottom:0in;}body,html{margin-right:0in;}body,html{margin-top:0in;}[class~=ohjenappula]{position:relative;}html{background-color:rgba(0,0,0,.3);}[class~=popuptext]::after{content:"";}body,html{overflow-x:hidden;}body,html{font-family:"Work Sans",sans-serif !important;}[class~=popuptext],[class~=ohjenappula]{text-align:center;}html{background:url("../javascript-peli/taustakuva2.jpg");}html,body{-webkit-background-position:center;}.fa-info-circle{font-size:3pc !important;}[class~=popuptext]::after,.fa-info-circle{position:absolute;}.fa-info-circle{color:red;}html,body{-moz-background-position:center;}body,html{-o-background-position:center;}.fa-info-circle{top:.5pc;}html{background-position:center;}.fa-info-circle{right:1pc;}.fa-info-circle{display:inline-block;}.fa-info-circle{cursor:pointer;}html,body{-webkit-background-repeat:no-repeat;}html,body{-moz-background-repeat:no-repeat;}.fa-info-circle{-webkit-user-select:none;}body,html{-o-background-repeat:no-repeat;}.fa-info-circle{-moz-user-select:none;}html{background-repeat:no-repeat;}.fa-info-circle{-ms-user-select:none;}body,html{-webkit-background-size:cover;}.fa-info-circle{user-select:none;}[class~=popuptext]::after{top:10%;}html,body{-moz-background-size:cover;}[class~=popuptext]{visibility:hidden;}body,html{-o-background-size:cover;}[class~=popuptext]{width:187.5pt;}[class~=popuptext]{height:240pt;}html{background-size:cover;}[class~=popuptext]::after{left:100%;}html,body{height:100%;}[class~=popuptext]{background-color:#555;}[class~=popuptext]::after{margin-left:-5px;}[class~=popuptext]{color:#fff;}[class~=popuptext]::after{border-left-width:3.75pt;}[class~=popuptext]::after{border-bottom-width:3.75pt;}body{background-color:rgba(0,0,0,.3);}[class~=popuptext]{border-radius:4.5pt;}body{background:url("../javascript-peli/taustakuva2.jpg");}[class~=popuptext]{padding-left:6pt;}[class~=popuptext]::after{border-right-width:3.75pt;}body{background-position:center;}[class~=popuptext]{padding-bottom:6pt;}[class~=popuptext]{padding-right:6pt;}[class~=popuptext]{padding-top:6pt;}body{background-repeat:no-repeat;}[class~=popuptext]::after{border-top-width:3.75pt;}[class~=popuptext]::after{border-left-style:solid;}[class~=popuptext]{position:absolute;}body{background-size:cover;}[class~=popuptext]{z-index:1;}[class~=popuptext]{top:.5pc;}h1{font-size:15pt;}h1{font-family:monospace;}h1{color:#fff !important;}[class~=popuptext]{right:4.375pc;}[class~=popuptext]::after{border-bottom-style:solid;}.show{visibility:visible;}[class~=popuptext]::after{border-right-style:solid;}.show{-webkit-animation:fadeIn 1.5s;}.show{animation:fadeIn 1.5s;}[class~=popuptext]::after{border-top-style:solid;}[class~=popuptext]::after{border-left-color:transparent;}[class~=popuptext]::after{border-bottom-color:transparent;}[class~=popuptext]::after{border-right-color:transparent;}[class~=popuptext]::after{border-top-color:#555;}@-webkit-keyframes fadeIn{from{opacity:0;}to{opacity:1;}}@keyframes fadeIn{from{opacity:0;}to{opacity:1;}}#valkovari,#mustavari,#punanen,#vihrea{display:none;}[class~=etusivu]{display:flex;}#mustavari,#vihrea,#punanen,[class~=paina2]{border-radius:10px;}[class~=etusivu],[class~=paina2]{justify-content:center;}[class~=paina2]:hover{background-color:rgba(0,0,0,.5);}[class~=paina2],[class~=etusivu]{flex-direction:column;}[class~=etusivu],[class~=paina2]{align-items:center;}[class~=etusivu]{min-height:100%;}[class~=etusivu]{padding-right:3.75pt !important;}[class~=etusivu]{padding-left:.052083333in !important;}[class~=etusivu]{margin-right:auto;}[class~=etusivu]{margin-left:auto;}[class~=etusivu]{min-width:210pt;}.otsikko{text-align:center;}.otsikko{text-shadow:0pc 0in 1.25pc #ff005b;}[class~=oma]{display:block;}[class~=oma]{max-width:100%;}[class~=oma]{height:auto;}[class~=oma]{margin-top:.75pt;}.vaihto,[class~=paina2]{background-color:transparent;}[class~=paina2]{margin-top:auto;}[class~=paina2],.vaihto{cursor:pointer;}[class~=paina2],.vaihto{color:#fff;}[class~=paina2]{padding-left:3.75pc;}[class~=paina2]{padding-bottom:3.75pc;}[class~=paina2]{padding-right:3.75pc;}[class~=paina2]{padding-top:3.75pc;}[class~=paina2]{border-left-width:.020833333in;}[class~=paina2]{border-bottom-width:.020833333in;}[class~=paina2]{border-right-width:.020833333in;}[class~=paina2]{border-top-width:.020833333in;}[class~=paina2]{border-left-style:solid;}[class~=paina2]{border-bottom-style:solid;}[class~=paina2]{border-right-style:solid;}[class~=paina2]{border-top-style:solid;}[class~=paina2]{border-left-color:currentColor;}#mustavari{color:white;}[class~=paina2]{border-bottom-color:currentColor;}[class~=paina2]{border-right-color:currentColor;}[class~=paina2]{border-top-color:currentColor;}[class~=paina2]{border-image:none;}[class~=paina2],.vaihto{display:flex;}.vaihto,[class~=paina2]{font-size:22.5pt;}[class~=col-xs-6]{padding-right:inherit !important;}[class~=col-xs-6]{padding-left:inherit !important;}.vaihto,[class~=rooli]{margin-top:3.75pt;}#valkovari{border-radius:7.5pt;}.vaihto,[class~=rooli]{padding-left:65px;}.vaihto,[class~=rooli]{padding-bottom:50px;}.vaihto,[class~=rooli]{padding-right:4.0625pc;}.vaihto,[class~=rooli]{padding-top:37.5pt;}.vaihto{border-left-width:1.5pt;}.vaihto{border-bottom-width:1.5pt;}.vaihto{border-right-width:1.5pt;}.vaihto{border-top-width:1.5pt;}.vaihto{border-left-style:solid;}.vaihto{border-bottom-style:solid;}.vaihto{border-right-style:solid;}.vaihto{border-top-style:solid;}.vaihto{border-left-color:currentColor;}.vaihto{border-bottom-color:currentColor;}.vaihto{border-right-color:currentColor;}.vaihto{border-top-color:currentColor;}.vaihto{border-image:none;}.vaihto,[class~=rooli]{justify-content:center;}.vaihto,[class~=rooli]{flex-direction:row;}.vaihto,[class~=rooli]{align-items:center;}.vaihto,[class~=rooli]{text-align:center;}[class~=rooli],.vaihto{margin-left:3.75pt;}[class~=rooli],.vaihto{margin-bottom:3.75pt;}.vaihto,[class~=rooli]{margin-right:3.75pt;}[class~=rooli],[class~=valkovari2]{background-color:transparent;}[class~=rooli],[class~=valkovari2]{cursor:pointer;}[class~=valkovari2],[class~=rooli]{color:#fff;}[class~=rooli]{border-left-width:1.5pt;}[class~=rooli]{border-bottom-width:1.5pt;}[class~=rooli]{border-right-width:1.5pt;}[class~=rooli]{border-top-width:1.5pt;}[class~=rooli]{border-left-style:solid;}[class~=rooli]{border-bottom-style:solid;}[class~=rooli]{border-right-style:solid;}[class~=rooli]{border-top-style:solid;}[class~=rooli]{border-left-color:currentColor;}[class~=rooli]{border-bottom-color:currentColor;}[class~=rooli]{border-right-color:currentColor;}[class~=rooli]{border-top-color:currentColor;}[class~=rooli]{border-image:none;}[class~=rooli],[class~=valkovari2]{display:flex;}[class~=valkovari2],[class~=rooli]{font-size:.3125in;}[class~=valkovari2],[class~=mustavari2]{margin-top:.3125pc;}[class~=valkovari2]{border-left-width:.020833333in;}[class~=valkovari2]{border-bottom-width:.020833333in;}[class~=valkovari2]{border-right-width:.020833333in;}[class~=valkovari2]{border-top-width:.020833333in;}[class~=valkovari2]{border-left-style:solid;}[class~=valkovari2]{border-bottom-style:solid;}[class~=valkovari2]{border-right-style:solid;}[class~=valkovari2]{border-top-style:solid;}[class~=valkovari2]{border-left-color:currentColor;}[class~=vaihto]:active,[class~=paina2]:active{transform:translateY(6px);}[class~=valkovari2]{border-bottom-color:currentColor;}[class~=valkovari2]{border-right-color:currentColor;}[class~=valkovari2]{border-top-color:currentColor;}[class~=valkovari2]{border-image:none;}[class~=mustavari2],[class~=valkovari2]{justify-content:center;}[class~=valkovari2],[class~=mustavari2]{flex-direction:row;}[class~=valkovari2],[class~=mustavari2]{align-items:center;}[class~=valkovari2],[class~=mustavari2]{padding-left:65px;}[class~=mustavari2],[class~=valkovari2]{padding-bottom:50px;}[class~=mustavari2],[class~=valkovari2]{padding-right:65px;}[class~=mustavari2],[class~=valkovari2]{padding-top:37.5pt;}[class~=mustavari2]:hover,[class~=valkovari2]:hover,[class~=vaihto]:hover,[class~=rooli]:hover{background-color:rgba(0,0,0,.5);}[class~=mustavari2],[class~=valkovari2]{text-align:center;}[class~=mustavari2],[class~=valkovari2]{margin-left:.3125pc;}[class~=mustavari2],[class~=valkovari2]{margin-bottom:.3125pc;}[class~=mustavari2],[class~=valkovari2]{margin-right:.3125pc;}[class~=mustavari2]{background-color:transparent;}[class~=mustavari2]{cursor:pointer;}[class~=mustavari2]{color:#fff;}[class~=mustavari2]{border-left-width:.020833333in;}[class~=mustavari2]{border-bottom-width:.020833333in;}[class~=mustavari2]{border-right-width:.020833333in;}[class~=mustavari2]{border-top-width:.020833333in;}[class~=mustavari2]{border-left-style:solid;}[class~=mustavari2]{border-bottom-style:solid;}[class~=mustavari2]{border-right-style:solid;}[class~=mustavari2]{border-top-style:solid;}[class~=mustavari2]{border-left-color:currentColor;}[class~=mustavari2]{border-bottom-color:currentColor;}[class~=mustavari2]{border-right-color:currentColor;}[class~=mustavari2]{border-top-color:currentColor;}[class~=mustavari2]{border-image:none;}[class~=mustavari2]{display:flex;}[class~=mustavari2]{font-size:30px;}[class~=valkovari2]:active,[class~=mustavari2]:active,[class~=rooli]:active{transform:translateY(6px);}@media (max-width: 768px){[class~=etusivu]{margin-left:0pt;}[class~=etusivu]{margin-bottom:0pt;}[class~=etusivu]{margin-right:0pt;}[class~=etusivu]{margin-top:0pt;}[class~=oma],[class~=etusivu]{height:auto;}[class~=paina2]{padding-left:33.75pt;}[class~=paina2]{padding-bottom:33.75pt;}[class~=paina2]{padding-right:33.75pt;}[class~=paina2]{padding-top:33.75pt;}[class~=rooli],[class~=valkovari2],[class~=mustavari2],[class~=vaihto],[class~=paina2]{font-size:15pt;}[class~=oma]{display:block;}[class~=oma]{max-width:100%;}[class~=oma]{padding-left:-1.041666667in;}[class~=oma]{padding-bottom:-1.041666667in;}[class~=oma]{padding-right:-1.041666667in;}[class~=oma]{padding-top:-1.041666667in;}[class~=oma]{margin-top:1px;}[class~=rooli],[class~=vaihto],[class~=mustavari2],[class~=valkovari2]{padding-left:22.5pt;}[class~=mustavari2],[class~=rooli],[class~=valkovari2],[class~=vaihto]{padding-bottom:22.5pt;}[class~=valkovari2],[class~=vaihto],[class~=rooli],[class~=mustavari2]{padding-right:22.5pt;}[class~=mustavari2],[class~=valkovari2],[class~=vaihto],[class~=rooli]{padding-top:22.5pt;}h1{font-size:13.5pt !important;}}@media (max-width: 450px){[class~=etusivu]{height:100%;}[class~=valkovari2],[class~=mustavari2]{font-size:20px;}[class~=mustavari2],[class~=valkovari2]{padding-left:22.5pt;}[class~=valkovari2],[class~=mustavari2]{padding-bottom:22.5pt;}[class~=mustavari2],[class~=valkovari2]{padding-right:22.5pt;}[class~=valkovari2],[class~=mustavari2]{padding-top:22.5pt;}}
